# solus-installer

./: .editorconfig  .gitignore  README.md  meson.build
data/: meson.build  org.freedesktop.policykit.pkexec.policy  os-installer-wrapper  us.getsol.Installer.desktop
src/: Installer.gresource.xml  disk_manager.c  disk_manager.h  install_info.c  install_info.h  main.c  meson.build  permissions.c  permissions.h  utils.c  utils.h  window.c  window.h
src/lib/: README.md  disk_manager.c  disk_manager.h  drive.c  drive.h  install_info.c  install_info.h  installer.c  installer.h  meson.build  os.c  os.h  partition.c  partition.h  permissions.c  permissions.h  strings.c  strings.h  system_partition.c  system_partition.h  user.c  user.h  utils.c  utils.h
styles/: _vars.scss  main.scss  meson.build
